--- a/bootstrap中文网/css/style.css
+++ b/bootstrap中文网/css/style.css
@@ -3,6 +3,12 @@
 	padding: 0;
 	font-family: "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","WenQuanYi Micro Hei",sans-serif;
 }
+.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6{
+	font-family: inherit;
+	font-weight: 500;
+	line-height: 1.1;
+	color: inherit;
+}
 .clear{
 	clear: both;
 }
@@ -150,12 +156,13 @@
 }
 /*projects部分*/
 .projects-header{
-	width: 47%;
+	width: 60%;
 	text-align: center;
 	padding-top: 4em;
 	padding-bottom: 2em;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 40px;
 
 }
 .projects-header-h1{
@@ -168,6 +175,12 @@
 }
 .page-header{
 	border-bottom: 1px solid #eee;
+	padding-bottom: 9px;
+}
+/*projects-row部分*/
+.projects-row{
+	margin-left: -15px;
+	margin-right: -15px;
 }
 .col-lg-3{
 	width: 25%;
@@ -178,6 +191,41 @@
 	padding-right: 15px;
 	text-align: center;
 }
+.thumbnail{
+	display: block;
+	height: 334px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+	text-align: center;
+	border-radius: 0;
+	padding: 4px;
+	border:1px solid #ddd;
+}
 div.col-sm-6 div.thumbnail a img{
 	width: 100%;
+}
+.caption{
+	height: 200px;
+	padding: 9px;
+}
+h3{
+	font-size: 24px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+h3 small{
+	font-size: 65%;
+	font-weight: 400;
+	line-height: 1;
+	color: #777;
+}
+.caption h3 a{
+	color: #337ab7;
+	text-decoration: none;
+
+}
+.caption p{
+	margin: 0 0 10px;
+	color: #555;
 }
