--- a/bootstrap中文网/css/style.css
+++ b/bootstrap中文网/css/style.css
@@ -81,6 +81,7 @@
     -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
     -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
     box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+
 }
 .banner:after{
 	content: '';
@@ -92,6 +93,10 @@
     left: 0;
     background: url(http://static.bootcss.com/www/assets/img/bs-docs-masthead-pattern.png) repeat center center;
     opacity: .4;
+}
+.banner .container{
+	position: relative;
+    z-index: 2;
 }
 .bootstrap{
 	text-align: center;
@@ -154,6 +159,9 @@
 	text-decoration: none;
 	color: #555555;
 }
+.contact-li a:hover{
+	color: #978fdc;
+}
 /*projects部分*/
 .projects-header{
 	width: 60%;
@@ -187,15 +195,13 @@
 	float: left;
 }
 .col-sm-6{
-	padding-left: 15px;
-	padding-right: 15px;
 	text-align: center;
 }
 .thumbnail{
 	display: block;
 	height: 334px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 15px;
+	margin-right: 15px;
 	margin-bottom: 10px;
 	text-align: center;
 	border-radius: 0;
