--- a/bootstrap中文网/css/style.css
+++ b/bootstrap中文网/css/style.css
@@ -163,6 +163,9 @@
 	color: #978fdc;
 }
 /*projects部分*/
+.projects{
+	padding-bottom: 4em;
+}
 .projects-header{
 	width: 60%;
 	text-align: center;
@@ -202,7 +205,7 @@
 	height: 334px;
 	margin-left: 15px;
 	margin-right: 15px;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	text-align: center;
 	border-radius: 0;
 	padding: 4px;
