--- a/weddingstore-by-me/css/style.css
+++ b/weddingstore-by-me/css/style.css
@@ -1,6 +1,30 @@
 *{
 	margin: 0px;
-	padding: 0
+	padding: 0px;
+}
+body{
+	font-size: 14px;
+}
+.container{
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-left: auto;
+	margin-right: auto;
+}
+@media screen and (min-device-width:768px){
+	.container{
+		width: 750px;
+	}
+}
+@media screen and (min-device-width:992px){
+	.container{
+		width: 970px;
+	}
+}
+@media screen and (min-device-width:1200px){
+	.container{
+		width: 1170px;
+	}
 }
 .clear{
 	clear: both;
@@ -8,10 +32,6 @@
 /*header部分*/
 #header{
 	background-color: #00A0DC;
-}
-.container{
-	width: 85%;
-	margin: 0 auto;
 }
 .container ul{
 	line-height: 3em;
@@ -35,9 +55,10 @@
 .header-right {
 	float: right;
 }
-/*wedding store*/
-#wedding-store .container{
+/*wedding-store*/
+#wedding-store{
 	padding-top: 2em;
+	padding-bottom: 2em;
 }
 .wedding-left{
 	float: left;
@@ -56,6 +77,7 @@
 .wedding-middle ul li{
 	list-style: none;
 	padding-right: 5em;
+	font-size: 15px;
 }
 .wedding-middle ul li a.li-home{
 	color: #00A0DC;
@@ -67,4 +89,34 @@
 	color: #CACCCE;
 	text-decoration: none;
 	font-weight: 700;
+}
+.wedding-middle ul li a.li-another:hover{
+	color: #01A2DD;
+}
+/*banner部分*/
+.banner-img{
+	width: 100%;
+}
+/*welcome部分*/
+.welcome{
+	padding-top: 2em;
+	padding-bottom: 2em;
+}
+.welcome-left{
+	font-size: 2em;
+	font-weight: 700;
+	color: #00A0DC;
+	width: 20%;
+	float: left;
+}
+.welcome-right{
+	float: right;
+	width: 75%;
+}
+.welcome-right h5{
+	color: #333333;
+}
+.welcome-right p{
+	color: #999999;
+	padding-top: 1em;
 }
