--- a/weddingstore-by-me/css/style.css
+++ b/weddingstore-by-me/css/style.css
@@ -106,6 +106,34 @@ body{
 .wedding-middle ul li a.li-another:hover{
 	color: #01A2DD;
 }
+.row{
+	position: absolute;
+	background-color: #fff;
+	width: 41%;
+	top: 120px;
+	left: 29.7%;
+	z-index: 99;
+	padding: 20px 30px 20px;
+	border:solid 1px #ccc;
+	box-sizing:border-box;
+}
+.row dl{
+	float: left;
+	box-sizing:border-box;
+	width: 31.97%;
+}
+.row dl dt{
+	color: #00A0DC;
+	font-size: 1.3em;
+	font-weight: 600;
+	text-align: left;
+}
+.row dl dd a{
+	color: #181b2a;
+	font-size: 15px;
+	font-weight: 600;
+	text-decoration: none;
+}
 /*banner部分*/
 .banner-img{
 	width: 100%;
