--- a/weddingstore-by-me/css/style.css
+++ b/weddingstore-by-me/css/style.css
@@ -426,6 +426,25 @@ figure.effect-bubba:hover p{
 	font-weight: 200;
 	padding-top: 0.5em;
 }
+/*arrivals部分*/
+.nbs-flexisel-item{
+	width: 25%;
+	list-style-type: none;
+	position: relative;
+	text-align: center;
+	border:1px solid black;
+}
+.nbs-flexisel-item a img{
+	width: 90%;
+}
+.nbs-flexisel-item .arrival-info{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+.nbs-flexisel-item .arrival-info h4,p,span{
+	margin: 0 auto;
+}
 /*footer部分*/
 .footer{
 	padding-top: 3em;
