--- a/weddingstore-by-me/css/style.css
+++ b/weddingstore-by-me/css/style.css
@@ -540,3 +540,8 @@ span.disc{
 	text-decoration: underline;
 	color: #999;
 }
+/*account.html-start*/
+.list1{
+	background-color: #F5F5F5;
+}
+/*account.html-end*/
