--- a/JavaScript_DOM编程艺术/9-2/styles/format.css
+++ b/JavaScript_DOM编程艺术/9-2/styles/format.css
@@ -31,3 +31,9 @@ th,td{
 tr:nth-child(even){
 	background-color: red;
 }*/
+/*tr:hover{
+	font-weight: bold;
+}*/
+.intro{
+	background-color: pink;
+}
